// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledButtonSnapshot should render custom text align button 1`] = `
<button
  className="sc-bczRLJ dqWClK"
/>
`;

exports[`StyledButtonSnapshot should render normal button 1`] = `
<button
  className="sc-bczRLJ jMYSRp"
/>
`;

exports[`StyledButtonSnapshot should render normal navigation button 1`] = `
<button
  className="sc-bczRLJ hQcwZr"
/>
`;

exports[`StyledButtonSnapshot should render normal primary button 1`] = `
<button
  className="sc-bczRLJ iyjxpd"
/>
`;
